[package]
name = "gullak-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.0"
rand_core = "=0.6.4"
rand_chacha = "=0.3.1"
rand = "=0.8.5"
signature = "=2.2.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
rand_core = "=0.6.4"
rand_chacha = "=0.3.1"
rand = "=0.8.5"
signature = "=2.2.0"

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"
